# rslater

./: .gitignore
AVO/: README.md  copilot-instructions.md  pyproject.toml
AVO/output/csv/: delivery_by_area_summary_table_riley_slater_20260623.csv  mock_county_summary_rows.csv  mock_cover_type_rows.csv  mock_delivery_by_area_rows.csv  mock_large_landowner_rows.csv  mock_mill_consumption_change_rows.csv  mock_ownership_type_rows.csv  mock_percent_acres_rows.csv  mock_pine_acres_by_age_class_rows.csv  mock_pine_volume_by_age_class_rows.csv  mock_portfolio_attributes_rows.csv  mock_top_customer_rows.csv  mock_top_destination_rows.csv  mock_woodbasket_rows.csv
AVO/src/avo_utils/: PrintMap_reference.py  __init__.py  bars.py  charts.py  csv.py  exports.py  io.py  maps.py  pies.py  tables.py
AVO/src/avo_utils/configs/: __init__.py  bars_config.py  color_config.py  pies_config.py  tables_config.py
AVO/tests/: test_charts.py  test_exports.py  test_io.py  test_maps.py
AVO/tests/mock_data/: county_summary_rows.json  cover_type_rows.json  delivery_by_area_rows.json  large_landowner_rows.json  mill_consumption_change_rows.json  ownership_type_rows.json  percent_acres_rows.json  pine_acres_by_age_class_rows.json  pine_volume_by_age_class_rows.json  portfolio_attributes.json  top_customer_rows.json  top_destination_rows.json  woodbasket_rows.json
repo-intelligence-tool/: copilot-instructions.md
stage-lambda-function/: lambda_function.py  package-lambda.ps1  requirements.txt  stage_zarr_api.py
test-app/: github_org_repo_inventory.py  (+1 more)
(+21 files in other folders)
